# backend

./: .gitattributes  .grype-test-trigger  .lunar-qa-touch  .lunar-test  .lunar-test-trigger  .lunar-trigger  .pre-commit-config.yaml  AGENTS.md  CODEOWNERS  Cargo.toml  Dockerfile  README.md  TEST_CLI.md  action.yml  catalog-info.yaml  go.mod  go.sum  main.go  openapi.yaml  quotes.txt  test-linear.txt  test-secrets.env.example
.agents/plans/: README.md  add-healthcheck-endpoint.md  migrate-to-structured-logging.md
.argocd/: mixed-resources.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  kubectl-test.yml  register-release-in-lunar.yml  security-demo.yml
argocd/: application.yaml
backstage/: other.yaml
datadog/dashboards/: cronos-demo-svc-overview.json
datadog/monitors/: error-rate-elevated.json  high-p99-latency.json
deploy/: AGENTS.md  configmap.yaml  containers.yml  deployment.yaml  host-namespaces.yaml  hpa.yaml  secrets.yaml  service.yaml  serviceaccount.yaml
deploy/terraform/: AGENTS.md  waf.tf
docs/: GEMINI.md  dr-plan.md
docs/dr-exercises/: 2024-07-22-failover-redis.md  2025-01-15-tabletop-db-failover.md
foo/: action.yml
image-other/: Dockerfile
istio/: authz.yaml  envoyfilter.yaml  gateway-vs.yaml  mtls.yaml  namespace.yaml
scripts/: .trigger-eng-759  build.sh  deploy.sh  test.sh
