[package]
name = "backend-vendored-licenses"
version = "0.1.0"
edition = "2021"

# Vendored helper crates used to demonstrate SBOM license country-of-origin
# detection (license-origins collector). Their LICENSE files name a country.
[dependencies]
crypto-helper = { path = "vendor-libs/crypto-helper" }
date-utils = { path = "vendor-libs/date-utils" }
scheduler-lib = { path = "vendor-libs/scheduler-lib" }
